--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en-us">
 
 <head>
+    <!-- Meta tags and link to the CSS file -->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon - Digital Marketing Solutions</title>
 </head>
 
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Navigation Menu -->
         <nav>
             <ul>
                 <li>
@@ -24,8 +27,11 @@
             </ul>
         </nav>
     </header>
+    <!-- Hero Image Section -->
     <div class="hero"></div>
+    <!-- Main Content Section -->
     <main>
+        <!-- SEO Section -->
         <section id="search-engine-optimization">
             <figure>
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
@@ -35,6 +41,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+        <!-- ORM Section -->
         <section id="online-reputation-management">
             <figure>
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management" />
@@ -44,6 +51,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        <!-- SMM Section -->
         <section id="social-media-marketing">
             <figure>
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
@@ -54,7 +62,9 @@
             </p>
         </section>
     </main>
+    <!-- Benefits Section -->
     <aside class="benefits">
+        <!-- Lead Generation Section -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
              <figure>
@@ -64,6 +74,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
+        <!-- Brand Awareness Section -->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <figure>
@@ -73,6 +84,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
+        <!-- Cost Management Section -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
             <figure>
@@ -83,6 +95,7 @@
             </p>
         </section>
     </aside>
+    <!-- Footer Section -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
